--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,9 @@ install:
 script:
   - mvn clean install
 #  - zip -r home/travis/build/44stv/Lv-318.Java/target/jar/server.zip home/travis/build/44stv/Lv-318.Java/target/jar
-  - ls
+  - pwd
   - cd target/jar
-  - zip -r server *
+  - zip -rm server *
   - ls /home/travis/build/44stv/Lv-318.Java/target/jar/
 
 #before_deploy:
@@ -40,7 +40,7 @@ deploy:
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
     bucket: travisdeploybucket
-    key: uaTransport-0.0.1.zip
+    key: server.zip
     bundle_type: .zip
     application: ServerCodedeployApplication
     deployment_group: ServerDeploymentGroup
