--- a/src/main/resources/appspec.yml
+++ b/src/main/resources/appspec.yml
@@ -1,7 +1,7 @@
 version: 0.0
 os: linux
 files:
-  - source: ./
+  - source: uaTransport-1.0.jar
     destination: /home/ec2-user/server
 #hooks:
 #  AfterInstall:
