--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
 #  mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
   - psql -c 'create database uatransport;' -U postgres
   - mvn package
+  - mvn test -B
 
 before_deploy:
   - cd target
