--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,12 @@ install:
   - mvn clean install
 
 script:
-  - cd target
+  - cd target/classes
+  - mv appspec.yml ..
+  - cd ..
   - zip -r server *
   - mkdir -p upload
   - mv server.zip upload/server.zip
-#  - cd ..
 #  - pwd
 #  - cd target/jar
 #  - zip -rm server *
