--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
                 <executions>
                     <execution>
                         <goals>
-                            <goal>format</goal>
+                            <goal>check</goal>
                         </goals>
                     </execution>
                 </executions>
