--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ install:
 script:
   - cd target/classes
   - mv appspec.yml ..
-#  - mkdir ../scripts
-  - mv scripts/* ..
+  - mkdir ../scripts
+  - mv scripts/* ../scripts/
   - cd ..
   - zip -r server *
   - mkdir -p upload
