--- a/src/main/resources/appspec.yml
+++ b/src/main/resources/appspec.yml
@@ -5,15 +5,15 @@ files:
     destination: /home/ec2-user/server
     overwrite: yes
 hooks:
-  ApplicationStop:
-    - location: server_stop.sh
+  AfterInstall:
+    - location: scripts/server_stop.sh
       timeout: 20
       runas: ec2-user
   ApplicationStart:
-    - location: server_start.sh
+    - location: scripts/server_start.sh
       timeout: 20
       runas: ec2-user
   ValidateService:
-    - location: server_validate.sh
+    - location: scripts/server_validate.sh
       timeout: 60
       runas: ec2-user
