--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,6 @@
 *.iml
 *.ipr
 
-
 ### NetBeans ###
 /nbproject/private/
 /build/
@@ -38,15 +37,6 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 #Maven
@@ -54,12 +44,10 @@ target/
 
 # Log file
 *.log
+*.tmp
 
 # BlueJ files
 *.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
 
 # Package Files #
 *.jar
@@ -70,6 +58,3 @@ target/
 *.tar.gz
 *.rar
 *.project
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
