--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,16 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>net.revelc.code.formatter</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
+                <version>2.7.3</version>
+                <configuration>
+                   <configXmlFile>
+                       ${project.basedir}/src/main/resources/checkstyle-configuration.xml
+                   </configXmlFile>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
