--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,29 @@
                 <executions>
                     <execution>
                         <phase>validate</phase>
-                        <goals><goal>check</goal></goals>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>net.revelc.code.formatter</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
+                <version>2.7.3</version>
+                <configuration>
+                    <configXmlFile>
+                        ${project.basedir}/src/main/resources/checkstyle-configuration.xml
+                    </configXmlFile>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>clean</phase>
+                        <goals>
+                            <goal>
+                                format
+                            </goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
