--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
             <version>4.5.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>25.0-jre</version>
+        </dependency>
+
     </dependencies>
 
     <build>
