--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/uaTransport
+spring.datasource.url=jdbc:postgresql://localhost:5432/uatransport
 spring.datasource.username=postgres
 spring.datasource.password=1
-#spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 # ===============================
 # = JPA / HIBERNATE
