--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.uaTransport</groupId>
-    <artifactId>uaTransport</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <groupId>org.uatransport</groupId>
+    <artifactId>ua-transport</artifactId>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>demo</name>
@@ -133,12 +133,6 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>4.5.5</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>25.0-jre</version>
         </dependency>
 
     </dependencies>
